chore(project): init the base project struct
