# src/facade/rest/AppConfigController.ts
@@ -1,14 +1,10 @@
-import { RoleService } from '@/domain/service/RoleService';
 import { Inject, Provider } from '@augejs/core';
 import { KoaContext, Prefix, RequestMapping, RequestParams } from '@augejs/koa';
 import { AccessData, KoaAccessTokenMiddleware } from '@augejs/koa-access-token';
 
-@Prefix('/api/v1/role/role')
+@Prefix('/api/v1/app/app-config')
 @Provider()
-export class RoleController {
-  @Inject(RoleService)
-  roleService!: RoleService;
-
+export class AppConfigController {
   @KoaAccessTokenMiddleware()
   @RequestMapping.Get('')
   async list(
@@ -17,27 +13,27 @@ export class RoleController {
     @RequestParams.Query('size') @RequestParams((value: string) => parseInt(value)) size: number,
   ): Promise<Record<string, unknown>> {
     const accessData = ctx.accessData as AccessData;
-    const userOrgNo = accessData.get<string>('userOrgNo');
-    const appNo = accessData.get<string>('appNo');
-    const userRoleLevel = accessData.get<number>('userRoleLevel');
-
-    const [list, count] = await this.roleService.list({
-      offset,
-      size,
-      appNo,
-      orgNo: userOrgNo,
-      roleLevel: userRoleLevel,
-    });
+    // const userOrgNo = accessData.get<string>('userOrgNo');
+    // const appNo = accessData.get<string>('appNo');
+    // const userRoleLevel = accessData.get<number>('userRoleLevel');
+    // const [list, count] = await this.roleService.list({
+    //   offset,
+    //   size,
+    //   appNo,
+    //   orgNo: userOrgNo,
+    //   roleLevel: userRoleLevel,
+    // });
     return {
-      list,
-      count,
+      list: [],
+      count: 0,
     };
   }
 
   @KoaAccessTokenMiddleware()
-  @RequestMapping.Delete(':roleNo')
-  async delete(@RequestParams.Params('roleNo') roleNo: string): Promise<Record<string, unknown>> {
-    await this.roleService.delete(roleNo);
+  @RequestMapping.Delete(':key')
+  async delete(@RequestParams.Context() ctx: KoaContext, @RequestParams.Params('key') key: string): Promise<Record<string, unknown>> {
+    const accessData = ctx.accessData as AccessData;
+    const appNo = accessData.get<string>('appNo');
     return {};
   }
 
