# src/facade/rest/AppDomainController.ts
@@ -1,13 +1,13 @@
-import { RoleService } from '@/domain/service/RoleService';
+import { AppDomainService } from '@/domain/service/AppDomainService';
 import { Inject, Provider } from '@augejs/core';
 import { KoaContext, Prefix, RequestMapping, RequestParams } from '@augejs/koa';
 import { AccessData, KoaAccessTokenMiddleware } from '@augejs/koa-access-token';
 
-@Prefix('/api/v1/role/role')
+@Prefix('/api/v1/app/app-domain')
 @Provider()
-export class RoleController {
-  @Inject(RoleService)
-  roleService!: RoleService;
+export class AppDomainController {
+  @Inject(AppDomainService)
+  appDomainService!: AppDomainService;
 
   @KoaAccessTokenMiddleware()
   @RequestMapping.Get('')
@@ -17,27 +17,25 @@ export class RoleController {
     @RequestParams.Query('size') @RequestParams((value: string) => parseInt(value)) size: number,
   ): Promise<Record<string, unknown>> {
     const accessData = ctx.accessData as AccessData;
-    const userOrgNo = accessData.get<string>('userOrgNo');
-    const appNo = accessData.get<string>('appNo');
-    const userRoleLevel = accessData.get<number>('userRoleLevel');
-
-    const [list, count] = await this.roleService.list({
-      offset,
-      size,
-      appNo,
-      orgNo: userOrgNo,
-      roleLevel: userRoleLevel,
-    });
+    // const userOrgNo = accessData.get<string>('userOrgNo');
+    // const appNo = accessData.get<string>('appNo');
+    // const userRoleLevel = accessData.get<number>('userRoleLevel');
+    // const [list, count] = await this.roleService.list({
+    //   offset,
+    //   size,
+    //   appNo,
+    //   orgNo: userOrgNo,
+    //   roleLevel: userRoleLevel,
+    // });
     return {
-      list,
-      count,
+      list: [],
+      count: 0,
     };
   }
 
   @KoaAccessTokenMiddleware()
-  @RequestMapping.Delete(':roleNo')
-  async delete(@RequestParams.Params('roleNo') roleNo: string): Promise<Record<string, unknown>> {
-    await this.roleService.delete(roleNo);
+  @RequestMapping.Delete(':domain')
+  async delete(@RequestParams.Params('domain') domain: string): Promise<Record<string, unknown>> {
     return {};
   }
 
