# src/facade/rest/SecurityCenterController.ts
@@ -1,6 +1,6 @@
 import { Provider } from '@augejs/core';
 import { Prefix } from '@augejs/koa';
 
-@Prefix('/api/v1/SecurityCenterController')
+@Prefix('/api/v1/user/security')
 @Provider()
 export class SecurityCenterController {}
